--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'Z'
 - !lcsh 'Publishers'' catalogs -- England -- London'
 - !lcsh 'Whittaker & Co. -- Catalogs'
+- GITenberg
 title: Whittaker & Co.'s List of Classical, Educational and Technical Works. July
   1889
 url: http://www.gutenberg.org/ebooks/40536
